fix selection types

--- a/src/assets/styles/parts/_dropdown-items.scss
+++ b/src/assets/styles/parts/_dropdown-items.scss
@@ -69,7 +69,14 @@
     }
 
 
+    &.rs-dropdown-items--single {
+        li.rs-dropdown-items__checked {
+            background-color: $rs-gray-100;
+        }
+    }
+
     &.rs-dropdown-items--range {
+
         padding-top: 8px;
         display: flex;
         flex-direction: column;
