--- a/src/assets/styles/parts/_dropdown.scss
+++ b/src/assets/styles/parts/_dropdown.scss
@@ -31,15 +31,27 @@
     }
 
     /*
+    // form-control
+    */
+    @import "form-control"; /*
+
+    /*
     // dropdown-header
     */
     @import "dropdown-header"; /*
+
     // dropdown-search
     */
     @import "dropdown-search"; /*
+
+    // dropdown-range-inputs
+    */
+    @import "dropdown-range-inputs"; /*
+
     // dropdown-items
     */
     @import "dropdown-items"; /*
+
     // dropdown-footer
     */
     @import "dropdown-footer";
