--- a/src/assets/styles/parts/_caption.scss
+++ b/src/assets/styles/parts/_caption.scss
@@ -1,5 +1,9 @@
 .rs-selection-caption {
+    display: flex;
+    align-items: center;
     width: 100%;
+    height: 40px;
+    padding: 8px 32px 8px 16px;
     font-size: .9375rem;
     font-weight: 400;
     font-stretch: normal;
@@ -7,4 +11,5 @@
     line-height: 1.36;
     letter-spacing: normal;
     color: $rs-black;
+    cursor: pointer;
 }
