--- a/src/assets/styles/parts/_toggle.scss
+++ b/src/assets/styles/parts/_toggle.scss
@@ -1,11 +1,6 @@
 .rs-selection-toggle {
     position: relative;
-    display: flex;
-    align-items: center;
     width: 100%;
-    cursor: pointer;
-    height: 40px;
-    padding: 8px 32px 8px 16px;
 
     .rs-rtl-selection & {
         padding: 8px 16px 8px 32px;
@@ -15,11 +10,13 @@
         display: block;
         position: absolute;
         right: 16px;
+        top: 50%;
         content: '';
         border: 0;
         width: 16px;
         height: 16px;
         cursor: pointer;
+        transform: translate(0, -50%);
 
         svg {
             stroke: currentColor;
@@ -37,20 +34,19 @@
     .rs-selection-clear-btn {
         position: absolute;
         background-color: $rs-primary;
-        width: 24px;
-        min-width: 24px;
-        height: 24px;
-        min-height: 24px;
+        width: 20px;
+        min-width: 20px;
+        height: 20px;
+        min-height: 20px;
         right: 12px;
-        outline: 0;
-        line-height: 0;
-        border: 0;
-        justify-content: center;
         top: 50%;
         transform: translate(0, -50%);
         border-radius: 50%;
         padding: 4px;
         cursor: pointer;
+        outline: 0;
+        line-height: 0;
+        border: 0;
         z-index: 2;
 
         svg {
