--- a/src/assets/styles/parts/_caption.scss
+++ b/src/assets/styles/parts/_caption.scss
@@ -3,7 +3,7 @@
     align-items: center;
     width: 100%;
     height: 40px;
-    padding: 8px 32px 8px 16px;
+    padding: 8px 48px 8px 16px;
     font-size: .9375rem;
     font-weight: 400;
     font-stretch: normal;
@@ -12,4 +12,14 @@
     letter-spacing: normal;
     color: $rs-black;
     cursor: pointer;
+
+    > span {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+
+    .rs-rtl-selection & {
+        padding: 8px 16px 8px 48px;
+    }
 }
