fix selection translate

--- a/src/assets/styles/parts/_dropdown.scss
+++ b/src/assets/styles/parts/_dropdown.scss
@@ -50,8 +50,9 @@
 
     // dropdown-items
     */
-    @import "dropdown-items"; /*
+    @import "dropdown-items";
 
+    /*
     // dropdown-footer
     */
     @import "dropdown-footer";
