--- a/src/assets/styles/parts/_loading.scss
+++ b/src/assets/styles/parts/_loading.scss
@@ -8,6 +8,11 @@
     top: 50%;
     transform: translate(0, -50%);
 
+    .rs-rtl-selection & {
+        right: unset;
+        left: 16px;
+    }
+
     .rs-selection-loading__circle {
         width: 100%;
         height: 100%;
