--- a/src/assets/styles/parts/_toggle.scss
+++ b/src/assets/styles/parts/_toggle.scss
@@ -1,6 +1,7 @@
 .rs-selection-toggle {
     position: relative;
     width: 100%;
+    border-radius: 8px;
 
     .rs-selection-toggle-icon {
         display: block;
