fix document home page

--- a/example/src/assets/sass/_variables.scss
+++ b/example/src/assets/sass/_variables.scss
@@ -7,6 +7,22 @@ $sidebar-footer-height:35px;
 $border-radius:4px;
 $badge-font-weight: 500;
 
+$black: #222222;
+$white: #ffffff;
+
+$primary: #38d39f;
+$primary-hover: #2fc488;
+$secondary: #341e7b;
+$secondary-dark: #2c0c8e;
+$success: #e7f4f0;
+$info: #ebf7ff;
+$info-hover: #72c9f6;
+$warning: #feefcb;
+$danger: #fdbbaa;
+$danger-text: #d93801;
+$dark: $black;
+$yellow: #fed33c;
+
 
 
 
