--- a/example/src/assets/sass/main.scss
+++ b/example/src/assets/sass/main.scss
@@ -3,7 +3,6 @@
 
 @import "animation";
 @import "sidebar-wrapper";
-@import "prism-theme";
 
 body {
     font-size: 1.05rem;
@@ -51,11 +50,11 @@ body {
     }
 
     .page-content {
-
         display: inline-block;
         width: 100%;
         transition: padding-left .3s ease;
         overflow-x: hidden;
+        overflow-y: scroll;
 
         .overlay {
             position: fixed;
@@ -67,8 +66,6 @@ body {
             background: #000;
             opacity: .5;
             display: none;
-
-
         }
 
         .sidebar-collapse-btn {
@@ -82,6 +79,10 @@ body {
                 border: 0;
             }
         }
+    }
+
+    .article-content {
+        min-height: calc(100% - 72px);
     }
 
     &.toggled {
@@ -238,4 +239,8 @@ body {
 .alert {
     padding: 1.3rem !important;
     margin-bottom: 2rem
+}
+
+.font-weight-500 {
+    font-weight: 500;
 }
