fix document progress bar

--- a/example/src/assets/sass/_sidebar-brand.scss
+++ b/example/src/assets/sass/_sidebar-brand.scss
@@ -5,9 +5,7 @@
         display: flex;
         align-items: center;
         height: $sidebar-brand-height;
-        background-color:  #007AFC;
-
-        
-}
+        background-color: $primary;
+    }
 }
 
