--- a/src/assets/styles/parts/_dropdown.scss
+++ b/src/assets/styles/parts/_dropdown.scss
@@ -30,6 +30,22 @@
         border-radius: 16px;
     }
 
+    @media only screen and (max-width: $rs-screen-xs-max) {
+        position: fixed;
+        display: none;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        border-radius: 0;
+        z-index: 5010;
+    }
+
     /*
     // form-control
     */
@@ -50,9 +66,7 @@
 
     // dropdown-items
     */
-    @import "dropdown-items";
-
-    /*
+    @import "dropdown-items"; /*
     // dropdown-footer
     */
     @import "dropdown-footer";
