--- a/src/assets/styles/parts/_dropdown-items.scss
+++ b/src/assets/styles/parts/_dropdown-items.scss
@@ -59,7 +59,7 @@
             }
         }
 
-        @media only screen and (max-width: $rs-screen-sm-max) {
+        @media only screen and (max-width: $rs-screen-xs-max) {
             padding: 12px 0;
         }
 
